--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ title: Zuurix.com - Home
 <a>Older posts</a>
 </comments>
 		
-<p><a href="http://zuurix.com/blog-archive">▶ View older posts</a></p>
+<p><a href="https://zuurix.com/blog-archive">▶ View older posts</a></p>
 
 </div>
