--- a/games/index.html
+++ b/games/index.html
@@ -16,9 +16,9 @@ title: Zuurix.com - Games
 	<p>Light of the Locked World is a fantasy RPG inspired by old school MMO's like Ultima Online and RuneScape.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ View on Steam</a></li>
-	<li><a href="http://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
-	<li><a href="http://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
+	<li><a href="https://store.steampowered.com/app/465020/" target="_blank">▶ View on Steam</a></li>
+	<li><a href="https://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
+	<li><a href="https://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
 	</ul>
 	
 	<comments>
@@ -30,9 +30,9 @@ title: Zuurix.com - Games
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
-	<li><a href="http://zuurix.com/sector-six/">▶ About the game</a></li>
-	<li><a href="http://zuurix.com/sector-six-presskit/">▶ View press kit</a></li>
+	<li><a href="https://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
+	<li><a href="https://zuurix.com/sector-six/">▶ About the game</a></li>
+	<li><a href="https://zuurix.com/sector-six-presskit/">▶ View press kit</a></li>
 	</ul>
 	
 	<comments>
@@ -44,7 +44,7 @@ title: Zuurix.com - Games
 	<p>Go to archive containing my old games, side projects and games made for competitions.</p>	
 	
 	<ul style="margin-bottom: 201px; list-style-type: none;">
-	<li><a href="http://zuurix.com/other-games/">▶ Go to archive</a></li>
+	<li><a href="https://zuurix.com/other-games/">▶ Go to archive</a></li>
 	</ul>
 	
 	<comments>
