--- a/sector-six-presskit/index.html
+++ b/sector-six-presskit/index.html
@@ -59,6 +59,7 @@ title: Zuurix.com - Sector Six press kit
 
 	<li>Michael Jendryssek</li>
 	<li><b>Website:</b> http://www.freekshow.de/</li>
+	<li><b>Twitter:</b> https://twitter.com/TheFreekshow</li>
 
 	</ul>
 	
