--- a/sector-six-presskit/index.html
+++ b/sector-six-presskit/index.html
@@ -146,7 +146,7 @@ title: Zuurix.com - Sector Six press kit
 	<a>Images</a>
 	</comments>
 	
-	<a href="https://imgur.com/LYK7Hqk"><img src="https://i.imgur.com/LYK7Hqk.png" class="center-universal" title="source: imgur.com" style="height: 960px; width: 540px;"/></a>
+	<a href="https://imgur.com/LYK7Hqk"><img src="https://i.imgur.com/LYK7Hqk.png" class="center-universal" title="source: imgur.com" style="width: 960px; height: 540px;"/></a>
 	
 	<a href="https://imgur.com/LY05dbc"><img src="https://i.imgur.com/LY05dbc.png" class="center-universal" title="source: imgur.com" /></a>
 	
