--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -32,14 +32,6 @@ You might be in danger - you must find out what's happening.</p>
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
 
 <comments>
-<a>Screenshots</a>
-</comments>
-	
-<img src=
-     "https://i.imgur.com/WBjMnxn.png"
-      alt="Moonrise Desert" class="center"> 
-	
-<comments>
 <a>Developer</a>
 </comments>
 	
@@ -87,7 +79,13 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 
 <li>Aivaras Klimas</li>
 <li><b>Email:</b> zuurix@protonmail.com</li>
+</ul>	
 
-</ul>
+<comments>
+<a>Graphics</a>
+</comments>
 	
+<blockquote class="imgur-embed-pub" lang="en" data-id="a/HLjhBFo"><a href="//imgur.com/HLjhBFo">Light of the Locked World official graphics</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+	
+
 </div><!-- /.blurb -->
