--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -30,7 +30,13 @@ You might be in danger - you must find out what's happening.</p>
 
 <p>Take the game to the next level by inviting another player to play with or against you.
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
-
+	
+<comments>
+<a>Trailer</a>
+</comments>
+	
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/lES8lJEUxwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 <comments>
 <a>Developer</a>
 </comments>
