--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -45,20 +45,20 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <img src="https://i.imgur.com/WBjMnxn.png" alt="Moonrise Desert" class="center"> 
 </a>
 	
-<a href="https://imgur.com/ZygN1RF" target="_blank">
-<img src="https://imgur.com/ZygN1RF" alt="Combat" class="center"> 
+<a href="https://i.imgur.com/ZygN1RF.png" target="_blank">
+<img src="https://i.imgur.com/ZygN1RF.png" alt="Combat" class="center"> 
 </a>
 
-<a href="https://imgur.com/JGzEovw" target="_blank">
-<img src="https://imgur.com/JGzEovw" alt="Eir Meadows" class="center"> 
+<a href="https://i.imgur.com/JGzEovw.png" target="_blank">
+<img src="https://i.imgur.com/JGzEovw.png" alt="Eir Meadows" class="center"> 
 </a>
 	
-<a href="https://imgur.com/QSn8bWA" target="_blank">
-<img src="https://imgur.com/QSn8bWA" alt="Items" class="center"> 
+<a href="https://i.imgur.com/QSn8bWA.png" target="_blank">
+<img src="https://i.imgur.com/QSn8bWA.png" alt="Items" class="center"> 
 </a>
 	
-<a href="https://imgur.com/vMmOGYA" target="_blank">
-<img src="https://imgur.com/vMmOGYA" alt="Split screen" class="center"> 
+<a href="https://i.imgur.com/vMmOGYA.png" target="_blank">
+<img src="https://i.imgur.com/vMmOGYA.png" alt="Split screen" class="center"> 
 </a>
 
 </div><!-- /.blurb -->
