--- a/games/index.html
+++ b/games/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Games
 	<p>Light of the Locked World is a fantasy RPG inspired by old school MMO's like Ultima Online and RuneScape.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/465020/" target="_blank">▶ View on Steam</a></li>
+	<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
 	<li><a href="https://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
 	<li><a href="https://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
 	</ul>
@@ -30,7 +30,7 @@ title: Zuurix.com - Games
 	<p>Sector Six is a side-scrolling shooter with silhouette aesthetic, procedural loot and extensive customization.</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/app/465020/" target="_blank">▶ Get from Steam</a></li>
+	<li><a href="https://store.steampowered.com/app/465020/Sector_Six/" target="_blank">▶ Get from Steam</a></li>
 	<li><a href="https://zuurix.com/sector-six/">▶ About the game</a></li>
 	<li><a href="https://zuurix.com/sector-six-presskit/">▶ View press kit</a></li>
 	</ul>
