--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -91,6 +91,6 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Graphics</a>
 </comments>
 	
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/HLjhBFo"><a href="//imgur.com/HLjhBFo">Light of the Locked World official graphics</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<p><a href="https://imgur.com/a/HLjhBFo">▶ View official graphics and screenshots</a></p>
 	
 </div><!-- /.blurb -->
