--- a/games/index.html
+++ b/games/index.html
@@ -36,6 +36,20 @@ title: Zuurix.com - Games
 	</ul>
 	
 	<comments>
+	<a>Magic of Autumn</a>
+	</comments>
+	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/magic_of_autumn/images/Square%20logo.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+	<p>Magic of Autumn is a CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>	
+	
+	<ul style="margin-bottom: 155px; list-style-type: none;">
+	<li><a href="https://store.steampowered.com/" target="_blank">▶ Coming soon to Steam</a></li>
+	<li><a href="https://zuurix.com/magic-of-autumn/">▶ About the game</a></li>
+	<li><a href="https://zuurix.com/magic-of-autumn-presskit/">▶ View press kit</a></li>
+	</ul>
+	
+	<comments>
 	<a>Other games</a>
 	</comments>
 	
