--- a/community/index.html
+++ b/community/index.html
@@ -10,11 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Light of the Locked World status:</p>
-
-<p>Pre-alpha demo is now available!</p>
-
-<p><a href="https://gamejolt.com/games/light-of-the-locked-world/418064">▶ Download from GameJolt</a></p>
+<p>Magic of Autumn - my new game - is coming soon to Steam!</p>
 
 <comments>
 <a>Join my Discord server</a>
