--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -6,19 +6,19 @@ title: Zuurix.com - Magic of Autumn
 	
 <h1>Magic of Autumn</h1>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/watch?v=SUV99xg9sQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SUV99xg9sQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
 </comments>
 
-<p><i>They couldn't kill you, so they took your soul.
-You wandered soulless for hundreds of years until you found where they hid it.
-It's time to get it back.</i></p>
+<p><i>They couldn't kill you, so they took your soul.</i></p>
+<p><i>You wandered soulless for hundreds of years until you found where they hid it.</i></p>
+<p><i>It's time to get it back.</i></p>
 	
 <p>Magic of Autumn is a CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
 
-<p><b>Features:</b></p>
+<p><b>Overworld</b></p>
 
 <p>Overworld to explore and find side areas, alternative paths, secrets.</p>
 <p>Simple, but powerful card battle system.</p>
