--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Magic of Autumn
 	
 <h1>Magic of Autumn</h1>
 	
-<iframe width="560" height="315" src="https://www.youtube.com/embed/SUV99xg9sQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/SUV99xg9sQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
@@ -16,15 +16,15 @@ title: Zuurix.com - Magic of Autumn
 <p><i>You wandered soulless for hundreds of years until you found where they hid it.</i></p>
 <p><i>It's time to get it back.</i></p>
 	
-<p>Magic of Autumn is a CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
-
-<p><b>Overworld</b></p>
-
-<p>Overworld to explore and find side areas, alternative paths, secrets.</p>
-<p>Simple, but powerful card battle system.</p>
-<p>3+ hours of content.</p>
-<p>50+ cards.</p>
-<p>30+ card battles.</p>
+<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
+	
+<p>Features a simple, but powerful card combat system comparable to systems in other modern CCGs, over 3 hours of content with 50+ cards, 30+ card fights, 20 achievements, and lore.
+	
+<ul style="margin-bottom: 155px; list-style-type: none;">
+<li><a href="https://store.steampowered.com/app/1097560/Light_of_the_Locked_World/" target="_blank">▶ View on Steam</a></li>
+<li><a href="https://zuurix.com/light-of-the-locked-world/">▶ About the game</a></li>
+<li><a href="https://zuurix.com/light-of-the-locked-world-presskit/">▶ View press kit</a></li>
+</ul>
 
 <comments>
 <a>Links</a>
