--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -18,7 +18,7 @@ title: Zuurix.com - Magic of Autumn
 	
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
 
-<p>Features a simple, but powerful card combat system comparable to systems in other modern CCGs, over 3 hours of content with 50+ cards, 30+ card fights, 20 achievements, and lore.
+<p>Features a simple, but powerful card combat system, lore, and over 3 hours of content: 50+ cards, 30+ card fights, 20 achievements.</p>
 	
 <comments>
 <a>Links</a>
@@ -30,8 +30,28 @@ title: Zuurix.com - Magic of Autumn
 <a>Screenshots</a>
 </comments>
 
-<a href="https://i.imgur.com/WBjMnxn.png" target="_blank">
-<img src="https://i.imgur.com/WBjMnxn.png" alt="Moonrise Desert" class="center"> 
+<a href="https://i.imgur.com/VC1uKUR.png" target="_blank">
+<img src="https://i.imgur.com/VC1uKUR.png" alt="Pumpkin patch" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/p74wOvF.png" target="_blank">
+<img src="https://i.imgur.com/p74wOvF.png" alt="Magic barrier" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/VC1uKUR.png" target="_blank">
+<img src="https://i.imgur.com/VC1uKUR.png" alt="Among the trees" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/siQsB5o.png" target="_blank">
+<img src="https://i.imgur.com/siQsB5o.png" alt="Bare branches" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/42CrKks.png" target="_blank">
+<img src="https://i.imgur.com/42CrKks.png" alt="Card collection" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/Z3lTEcX.png" target="_blank">
+<img src="https://i.imgur.com/Z3lTEcX.png" alt="Card battle" class="center"> 
 </a>
 
 </div><!-- /.blurb -->
