--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -18,7 +18,7 @@ title: Zuurix.com - Magic of Autumn
 	
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
 
-<p>Features a simple, but powerful card combat system, lore, and over 3 hours of content: 50+ cards, 30+ card fights, 20 achievements.</p>
+<p>Features a simple, but powerful card combat system, exciting exploration of the Golden Apple Island, lore, and over 3 hours of content: 50+ cards, 30+ card fights, 20 achievements.</p>
 	
 <comments>
 <a>Links</a>
