--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Zuurix.com - Community
 <a>Message from Zuurix</a>
 </comments>
 
-<p>Magic of Autumn - my new game - is coming soon to Steam!</p>
+<p>Magic of Autumn - my new game - will be on Steam soon!</p>
 
 <comments>
 <a>Join my Discord server</a>
