--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -20,7 +20,7 @@ title: Zuurix.com - Magic of Autumn
 
 <p>Features:</p>
 	
-<ul style="margin-bottom: 155px; list-style-type: none;">
+<ul style="list-style-type: none;">
 <li><p>▶ A simple, but powerful card combat system</p></li>
 <li><p>▶ An exciting exploration of the Golden Apple Island</p></li>
 <li><p>▶ Lore</p></li>
