--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -18,7 +18,17 @@ title: Zuurix.com - Magic of Autumn press kit
 	
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
 
-<p>Features a simple, but powerful card combat system, exciting exploration of the Golden Apple Island, lore, and over 3 hours of content: 50+ cards, 30+ card fights, 20 achievements.</p>
+<p>Features:</p>
+	
+<ul style="list-style-type: none;">
+<li><p>▶ A simple, but powerful card combat system</p></li>
+<li><p>▶ An exciting exploration of the Golden Apple Island</p></li>
+<li><p>▶ Lore</p></li>
+<li><p>▶ 3+ hours of content</p></li>
+<li><p>▶ 50+ cards</p></li>
+<li><p>▶ 30+ fights</p></li>
+<li><p>▶ 20 achievements</p></li>
+</ul>
 	
 <comments>
 <a>Trailer</a>
