--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Magic of Autumn
 <p><i>You wandered soulless for hundreds of years until you found where they hid it.</i></p>
 <p><i>It's time to get it back.</i></p>
 	
-<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a playable card!</p>
+<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card!</p>
 
 <p>Features:</p>
 	
