--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -40,8 +40,8 @@ title: Zuurix.com - Magic of Autumn
 <a>Screenshots</a>
 </comments>
 
-<a href="https://i.imgur.com/VC1uKUR.png" target="_blank">
-<img src="https://i.imgur.com/VC1uKUR.png" alt="Pumpkin patch" class="center"> 
+<a href="https://imgur.com/9w3i75Z" target="_blank">
+<img src="https://imgur.com/9w3i75Z" alt="Pumpkin patch" class="center"> 
 </a>
 	
 <a href="https://i.imgur.com/p74wOvF.png" target="_blank">
