--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -12,23 +12,9 @@ title: Zuurix.com - Magic of Autumn
 <a>About the game</a>
 </comments>
 
-<p><i>They couldn't kill you, so they took your soul.</i></p>
-<p><i>You wandered soulless for hundreds of years until you found where they hid it.</i></p>
-<p><i>It's time to get it back.</i></p>
+<p><i>They couldn't kill you, so they took your soul. You wandered soulless for hundreds of years until you found where they hid it. It's time to get it back.</i></p>
 	
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card!</p>
-
-<p>Features:</p>
-	
-<ul style="list-style-type: none;">
-<li><p>▶ A simple, but powerful card combat system</p></li>
-<li><p>▶ An exciting exploration of the Golden Apple Island</p></li>
-<li><p>▶ Lore</p></li>
-<li><p>▶ 3+ hours of content</p></li>
-<li><p>▶ 50+ cards</p></li>
-<li><p>▶ 30+ fights</p></li>
-<li><p>▶ 20 achievements</p></li>
-</ul>
 	
 <comments>
 <a>Links</a>
