--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -16,25 +16,25 @@ title: Zuurix.com - Magic of Autumn
 	
 <p><b>Story:</b></p>
 	
-<p>You used to be the Imperial Warden, the strongest conjurer of the Eight Kingdoms, until someone stole your soul.
-For hundreds of years you wandered soulless until you found where your soul has been hidden.
+<p>You used to be the Imperial Warden, the strongest conjurer of the Eight Kingdoms until someone stole your soul.
+You wandered soulless for hundreds of years until you found where your soul has been hidden.
 The soulless ones cannot die and experience unimaginable suffering - you must get your soul back.</p>
 	
 <p><b>Combat:</b></p>
 
-<p>As a soulless conjurer you can only fight in the Spirit World using mental manifestations of things in the physical plane.
+<p>As a soulless conjurer, you can only fight in the Spirit World using mental manifestations of things in the physical plane.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
 
 <p><b>Conjuring:</b></p>
 
-<p>The only power that soulless ones can wield.
+<p>The only power that the soulless ones can wield.
 Everything in the physical plane can be conjured into idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
 
 <p><b>Exploration:</b></p>
 	
 <p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
-Win fights to remove obstacles and gain access to new areas of the Island with new things to conjure and occasionally a lore fragment.
+Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
 It takes over three hours to clear all of the content.</p>
 	
 <comments>
