--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -47,8 +47,8 @@ It takes over three hours to clear all of the content.</p>
 <a>Screenshots</a>
 </comments>
 
-<a href="https://imgur.com/9w3i75Z" target="_blank">
-<img src="https://imgur.com/9w3i75Z" alt="Pumpkin patch" class="center"> 
+<a href="https://i.imgur.com/9w3i75Z.png" target="_blank">
+<img src="https://i.imgur.com/9w3i75Z.png" alt="Pumpkin patch" class="center"> 
 </a>
 	
 <a href="https://i.imgur.com/p74wOvF.png" target="_blank">
