--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -16,9 +16,9 @@ title: Zuurix.com - Magic of Autumn
 	
 <p><b>Story:</b></p>
 	
-<p>You used to be the Imperial Warden, the strongest conjurer of the Eight Kingdoms until someone stole your soul.
+<p>Before your soul was stolen, you were the Imperial Warden, the strongest conjurer of the Eight Kingdoms. 
 You wandered soulless for hundreds of years until you found where your soul has been hidden.
-The soulless ones cannot die and experience unimaginable suffering - you must get your soul back.</p>
+The soulless ones cannot die and experience unimaginable suffering - you must get it back.</p>
 	
 <p><b>Combat:</b></p>
 
