--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -17,25 +17,26 @@ title: Zuurix.com - Magic of Autumn
 <p><b>Story:</b></p>
 	
 <p>Before your soul was stolen, you were the Imperial Warden, the strongest conjurer of the Eight Kingdoms. 
-You wandered soulless for hundreds of years until you found where your soul has been hidden.
+You wandered soulless for hundreds of years until you found where the soul has been hidden.
 The soulless ones cannot die and experience unimaginable suffering - you must get it back.</p>
 	
-<p><b>Combat:</b></p>
-
-<p>As a soulless conjurer, you can only fight in the Spirit World using mental manifestations of things in the physical plane.
-The combat system is inspired by games like Hearthstone and Magic: The Gathering.
-It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
-
 <p><b>Conjuring:</b></p>
 
 <p>The only power that the soulless ones can wield.
 Everything in the physical plane can be conjured into idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
+	
+<p><b>Combat:</b></p>
+
+<p>In the physical plane you are just a sliver of a person barely able to interact with it.
+You have to ascend to the Spirit World to make things change.
+The combat system is inspired by games like Hearthstone and Magic: The Gathering.
+It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
 
 <p><b>Exploration:</b></p>
 	
 <p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
 Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
-It takes over three hours to clear all of the content.</p>
+It takes over three hours to fully explore the Island, find all lore fragments, get all cards, and win all fights.</p>
 	
 <comments>
 <a>Links</a>
