--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -27,7 +27,7 @@ Everything in the physical plane can be conjured into idols and wishes that beco
 	
 <p><b>Combat:</b></p>
 
-<p>In the physical plane you are just a sliver of a person barely able to interact with it.
+<p>In the physical plane you are just a shadow of a person.
 You have to ascend to the Spirit World to make things change.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
@@ -36,7 +36,7 @@ It's easy to learn for those who are not familiar with the genre and offers rule
 	
 <p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
 Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
-It takes over three hours to fully explore the Island, find all lore fragments, get all cards, and win all fights.</p>
+It takes over three hours to fully explore the Island, find all lore fragments, conjure all cards, and win all fights.</p>
 	
 <comments>
 <a>Links</a>
