--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -27,7 +27,7 @@ Everything in the physical plane can be conjured into idols and wishes that beco
 	
 <p><b>Combat:</b></p>
 
-<p>In the physical plane you are just a shadow of a person.
+<p>In the physical plane, you are just a shadow of a person.
 You have to ascend to the Spirit World to make things change.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
