--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Magic of Autumn
 <a>About the game</a>
 </comments>
 
-<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card!</p>
+<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card.</p>
 	
 <p><b>Story:</b></p>
 	
