--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -17,18 +17,30 @@ title: Zuurix.com - Magic of Autumn press kit
 <p><i>It's time to get it back.</i></p>
 	
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card!</p>
-
-<p>Features:</p>
 	
-<ul style="list-style-type: none;">
-<li><p>▶ A simple, but powerful card combat system</p></li>
-<li><p>▶ An exciting exploration of the Golden Apple Island</p></li>
-<li><p>▶ Lore</p></li>
-<li><p>▶ 3+ hours of content</p></li>
-<li><p>▶ 50+ cards</p></li>
-<li><p>▶ 30+ fights</p></li>
-<li><p>▶ 20 achievements</p></li>
-</ul>
+<p><b>Story:</b></p>
+	
+<p>Before your soul was stolen, you were the Imperial Warden, the strongest conjurer of the Eight Kingdoms. 
+You wandered soulless for hundreds of years until you found where the soul has been hidden.
+The soulless ones cannot die and experience unimaginable suffering - you must get it back.</p>
+	
+<p><b>Conjuring:</b></p>
+
+<p>The only power that the soulless ones can wield.
+Everything in the physical plane can be conjured into idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
+	
+<p><b>Combat:</b></p>
+
+<p>In the physical plane, you are just a shadow of a person.
+You have to ascend to the Spirit World to make things change.
+The combat system is inspired by games like Hearthstone and Magic: The Gathering.
+It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
+
+<p><b>Exploration:</b></p>
+	
+<p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
+Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
+It takes over three hours to fully explore the Island, find all lore fragments, conjure all cards, and win all fights.</p>
 	
 <comments>
 <a>Trailer</a>
