--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -13,20 +13,22 @@ title: Zuurix.com - Light of the Locked World
 </comments>
 
 <p>Light of the Locked World is a fantasy RPG with local multiplayer, inspired by old school MMOs like Ultima Online and RuneScape.</p>
-	
+
+<p><b>Story</b></p>
+
 <p>The World Gate has malfunctioned and you are taken to Caios II - the Locked World.
 As you build a new life for yourself, you notice that something sinister is going on.
 You might be in danger - you must find out what's happening.</p>
 
-<p><b>Features:</b></p>
+<p><b>Features</b></p>
 
 <p>Light of the Locked World has all of the beloved RPG features - quests, exploration, crafting, and deep character customization - executed in uncommon ways.</p>
 
-<p><b>Combat:</b></p>
+<p><b>Combat</b></p>
 
 <p>Real-time, uses only one button to attack, effectiveness is based on equipment stats and player's positioning skill.</p>
 
-<p><b>Local multiplayer:</b></p>
+<p><b>Local multiplayer</b></p>
 
 <p>Take the game to the next level by inviting another player to play with or against you.
 You have the freedom to compete for rare items, cooperate to overcome difficult tasks, steal, trade, duel, and more.</p>
