--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -14,25 +14,25 @@ title: Zuurix.com - Magic of Autumn press kit
 
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card.</p>
 	
-<p><b>Story:</b></p>
+<p><b>Story</b></p>
 	
 <p>Before your soul was stolen, you were the Imperial Warden, the strongest conjurer of the Eight Kingdoms. 
 You wandered soulless for hundreds of years until you found where the soul has been hidden.
 The soulless ones cannot die and experience unimaginable suffering - you must get it back.</p>
 	
-<p><b>Conjuring:</b></p>
+<p><b>Conjuring</b></p>
 
 <p>The only power that the soulless ones can wield.
 Everything in the physical plane can be conjured into idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
 	
-<p><b>Combat:</b></p>
+<p><b>Combat</b></p>
 
 <p>In the physical plane, you are just a shadow of a person.
 You have to ascend to the Spirit World to make things change.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
 It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
 
-<p><b>Exploration:</b></p>
+<p><b>Exploration</b></p>
 	
 <p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
 Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
