--- a/magic-of-autumn-presskit/index.html
+++ b/magic-of-autumn-presskit/index.html
@@ -14,11 +14,12 @@ title: Zuurix.com - Magic of Autumn press kit
 
 <p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card.</p>
 	
+<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card.</p>
+	
 <p><b>Story</b></p>
 	
-<p>Before your soul was stolen, you were the Imperial Warden, the strongest conjurer of the Eight Kingdoms. 
-You wandered soulless for hundreds of years until you found where the soul has been hidden.
-The soulless ones cannot die and experience unimaginable suffering - you must get it back.</p>
+<p>You were the Imperial Warden, the most powerful conjurer of the Eight Kingdoms.
+Your soul was stolen. You must get it back.</p>
 	
 <p><b>Conjuring</b></p>
 
@@ -27,16 +28,15 @@ Everything in the physical plane can be conjured into idols and wishes that beco
 	
 <p><b>Combat</b></p>
 
-<p>In the physical plane, you are just a shadow of a person.
-You have to ascend to the Spirit World to make things change.
+<p>In the physical plane, you are just a faint shadow. You can you only attack in the Spirit World.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
-It's easy to learn for those who are not familiar with the genre and offers rule twists for the veterans.</p>
+It's easy to learn for those who are not familiar with the genre and it has rule twists to make it interesting for the veterans.</p>
 
 <p><b>Exploration</b></p>
 	
-<p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and a maze designed to keep you away from your soul.
-Win fights to gain access to the new areas of the Island with new things to conjure and occasionally a lore fragment.
-It takes over three hours to fully explore the Island, find all lore fragments, conjure all cards, and win all fights.</p>
+<p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and protected by runes designed to stop you.
+You come here at autumn, hoping that the defenses would be weakened during the season of decay.
+Win fights to break runes and gain access the new areas of the Island that is full of things to find.</p>
 	
 <comments>
 <a>Trailer</a>
