--- a/other-games/index.html
+++ b/other-games/index.html
@@ -67,19 +67,55 @@ title: Zuurix.com - Other games
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">▶ Download</a></li>
 </ul>
+
+<comments>
+<a>Armored Constellations</a>
+</comments>	
 	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+<p>Armored Constellations is a small looter shooter.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/armored-constellations" target="_blank">▶ Download</a></li>
+</ul>
+	
+<comments>
+<a>Song of Wrath</a>
+</comments>	
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+<p>Song of Wrath is a bullet hell RPG made under 12 hours.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/song-of-wrath" target="_blank">▶ Download</a></li>
+</ul>
+	
+<comments>
+<a>Mortal Symbols</a>
+</comments>	
+	
+<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+<p>Mortal Symbols is a small CCG made under 48 hours.</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/mortal-symbols" target="_blank">▶ Download</a></li>
+</ul>
+
 <comments>
 <a>Lur</a>
 </comments>
 	
 <img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Lur%20picture.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
-    	
+ 
 <p>Lur is an RPG with a lot of content. It is my third game.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/lur-rpg" target="_blank">▶ Download</a></li>
 </ul>
-	
+
 <comments>
 <a>Sector Seven</a>
 </comments>
