--- a/games/index.html
+++ b/games/index.html
@@ -44,7 +44,7 @@ title: Zuurix.com - Games
 	<p>Magic of Autumn is a CCG with an overworld - and everything in the overworld can be turned into a card!</p>	
 	
 	<ul style="margin-bottom: 155px; list-style-type: none;">
-	<li><a href="https://store.steampowered.com/" target="_blank">▶ Coming soon to Steam</a></li>
+	<li><a href="https://store.steampowered.com/app/1184450/Magic_of_Autumn/" target="_blank">▶ View on Steam</a></li>
 	<li><a href="https://zuurix.com/magic-of-autumn/">▶ About the game</a></li>
 	<li><a href="https://zuurix.com/magic-of-autumn-presskit/">▶ View press kit</a></li>
 	</ul>
