--- a/magic-of-autumn/index.html
+++ b/magic-of-autumn/index.html
@@ -6,13 +6,13 @@ title: Zuurix.com - Magic of Autumn
 	
 <h1>Magic of Autumn</h1>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/SUV99xg9sQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/TOdRCQnDCg0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>About the game</a>
 </comments>
 
-<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into a card.</p>
+<p>Magic of Autumn is a singleplayer CCG with an overworld - and everything in the overworld can be turned into cards.</p>
 	
 <p><b>Story</b></p>
 	
@@ -22,25 +22,25 @@ Your soul was stolen. You must get it back.</p>
 <p><b>Conjuring</b></p>
 
 <p>The only power that the soulless ones can wield.
-Everything in the physical plane can be conjured into idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
+Every object in the game's world can be conjured into cards - idols and wishes that become your guardians and weapons during fights in the Spirit World.</p>
 	
 <p><b>Combat</b></p>
 
-<p>In the physical plane, you are just a faint shadow. You can you only attack in the Spirit World.
+<p>In the physical plane, you are just a faint shadow. You can only attack in the Spirit World.
 The combat system is inspired by games like Hearthstone and Magic: The Gathering.
-It's easy to learn for those who are not familiar with the genre and it has rule twists to make it interesting for the veterans.</p>
+It's easy to learn for those who are not familiar with the genre and has rule twists to make it interesting for the veterans.</p>
 
 <p><b>Exploration</b></p>
 	
-<p>Explore a remote Golden Apple Island, a place haunted by seasonal spirits, and protected by runes designed to stop you.
-You come here at autumn, hoping that the defenses would be weakened during the season of decay.
-Win fights to break runes and gain access the new areas of the Island that is full of things to find.</p>
+<p>Explore a remote Golden Apple Island, a place haunted by the seasonal spirits and protected by runes.
+You come here in autumn, hoping that the defenses would be weakened during the season of decay.
+Win fights to break runes and gain access to the new areas of the Island that are full of things to find.</p>
 	
 <comments>
 <a>Links</a>
 </comments>
 	
-<p><a href="https://store.steampowered.com/">▶ Coming soon to Steam</a></p>
+<p><a href="https://store.steampowered.com/app/1184450/Magic_of_Autumn/">▶ Steam</a></p>
 
 <comments>
 <a>Screenshots</a>
