--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -12,23 +12,23 @@ title: Zuurix.com - Light of the Locked World press kit
 <a>Full game description</a>
 </comments>
 
-<p>Light of the Locked World is an ambitious fantasy RPG with local multiplayer, inspired by old school MMOs like RuneScape and Ultima Online.<p>
+<p>Light of the Locked World is an ambitious fantasy RPG with local multiplayer, inspired by old school MMOs like RuneScape and Ultima Online.</p>
 
 <p><b>Story</b></p>
 
 <p>The Locked World is uncivilized, chaotic, and ravaged by a recent war. A world where everyone is capable of controlling magic. A world infested by demons and roamed by criminals.
 You get thrown in the middle of it all, without a way to escape.
-Start a new life, become powerful, and stand against the insidious evil that permeates everything here.<p>
+Start a new life, become powerful, and stand against the insidious evil that permeates everything here.</p>
 
 <p><b>Features</b></p>
 
 <p>The game is built to be a true RPG with all of the beloved features:
-Role leveling system, sophisticated equipment system, faction reputation system, complex quests, detailed lore, spells, and more - you won't be disappointed.<p>
+Role leveling system, sophisticated equipment system, faction reputation system, complex quests, detailed lore, spells, and more - you won't be disappointed.</p>
 
 <p><b>Multiplayer</b></p>
 
 <p>Invite another player to play with or against you.
-You have the freedom to compete for rare items, cooperate to overcome difficult tasks, fight for the control of key locations, steal, trade, duel... No feature is excluded.<p>
+You have the freedom to compete for rare items, cooperate to overcome difficult tasks, fight for the control of key locations, steal, trade, duel... No feature is excluded.</p>
 	
 <comments>
 <a>Trailer</a>
