--- a/light-of-the-locked-world/index.html
+++ b/light-of-the-locked-world/index.html
@@ -12,23 +12,23 @@ title: Zuurix.com - Light of the Locked World
 <a>About the game</a>
 </comments>
 
-<p>Light of the Locked World is an ambitious fantasy RPG with local multiplayer, inspired by old school MMOs like RuneScape and Ultima Online.<p>
+<p>Light of the Locked World is an ambitious fantasy RPG with local multiplayer, inspired by old school MMOs like RuneScape and Ultima Online.</p>
 
 <p><b>Story</b></p>
 
 <p>The Locked World is uncivilized, chaotic, and ravaged by a recent war. A world where everyone is capable of controlling magic. A world infested by demons and roamed by criminals.
 You get thrown in the middle of it all, without a way to escape.
-Start a new life, become powerful, and stand against the insidious evil that permeates everything here.<p>
+Start a new life, become powerful, and stand against the insidious evil that permeates everything here.</p>
 
 <p><b>Features</b></p>
 
 <p>The game is built to be a true RPG with all of the beloved features:
-Role leveling system, sophisticated equipment system, faction reputation system, complex quests, detailed lore, spells, and more - you won't be disappointed.<p>
+Role leveling system, sophisticated equipment system, faction reputation system, complex quests, detailed lore, spells, and more - you won't be disappointed.</p>
 
 <p><b>Multiplayer</b></p>
 
 <p>Invite another player to play with or against you.
-You have the freedom to compete for rare items, cooperate to overcome difficult tasks, fight for the control of key locations, steal, trade, duel... No feature is excluded.<p>
+You have the freedom to compete for rare items, cooperate to overcome difficult tasks, fight for the control of key locations, steal, trade, duel... No feature is excluded.</p>
 
 <comments>
 <a>Links</a>
@@ -40,20 +40,40 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Screenshots</a>
 </comments>
 	
-<a href="https://i.imgur.com/ZygN1RF.png" target="_blank">
-<img src="https://i.imgur.com/ZygN1RF.png" alt="Combat" class="center"> 
-</a>
-
-<a href="https://i.imgur.com/JGzEovw.png" target="_blank">
-<img src="https://i.imgur.com/JGzEovw.png" alt="Eir Meadows" class="center"> 
+<a href="https://i.imgur.com/iamjf9B.png" target="_blank">
+<img src="https://i.imgur.com/iamjf9B.png" alt="Barricades" class="center"> 
 </a>
 	
-<a href="https://i.imgur.com/QSn8bWA.png" target="_blank">
-<img src="https://i.imgur.com/QSn8bWA.png" alt="Items" class="center"> 
-</a>
-	
-<a href="https://i.imgur.com/vMmOGYA.png" target="_blank">
-<img src="https://i.imgur.com/vMmOGYA.png" alt="Split screen" class="center"> 
+<a href="https://i.imgur.com/dXeCM2m.png" target="_blank">
+<img src="https://i.imgur.com/dXeCM2m.png" alt="Town" class="center"> 
 </a>
 
+<a href="https://i.imgur.com/3d3wSJM.png" target="_blank">
+<img src="https://i.imgur.com/3d3wSJM.png" alt="Combat" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/R4YmTLT.png" target="_blank">
+<img src="https://i.imgur.com/R4YmTLT.png" alt="Quest" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/RPestOw.png" target="_blank">
+<img src="https://i.imgur.com/RPestOw.png" alt="Items" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/QLQHIL7.png" target="_blank">
+<img src="https://i.imgur.com/QLQHIL7.png" alt="In a building" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/kZ9bEqn.png" target="_blank">
+<img src="https://i.imgur.com/kZ9bEqn.png" alt="Roles" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/HEhawHm.png" target="_blank">
+<img src="https://i.imgur.com/HEhawHm.png" alt="Multiplayer" class="center"> 
+</a>
+	
+<a href="https://i.imgur.com/5biNbDf.png" target="_blank">
+<img src="https://i.imgur.com/5biNbDf.png" alt="Quest completed" class="center"> 
+</a>
+	
 </div><!-- /.blurb -->
