--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -34,7 +34,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 <a>Trailer</a>
 </comments>
 	
-<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/lES8lJEUxwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" class="center-video" src="https://www.youtube.com/embed/GshSJHrOVe0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 <comments>
 <a>Developer</a>
