--- a/light-of-the-locked-world-presskit/index.html
+++ b/light-of-the-locked-world-presskit/index.html
@@ -53,7 +53,7 @@ You have the freedom to compete for rare items, cooperate to overcome difficult 
 	
 <ul style="list-style-type:none">
 
-<li>Currently unavailable</li>
+<li>Pre-alpha demo available on GameJolt, Itch.io, Steam</li>
 </ul>
 	
 <comments>
