--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -1,1 +1,88 @@
+---
+layout: default
+title: Zuurix.com - Legion of Eternity press kit
+---
+<div class="blurb">
+	
+<h1>Legion of Eternity press kit</h1>
+	
+<p>Contacts, information, and resources</p>
+	
+<comments>
+<a>Full game description</a>
+</comments>
 
+<p>Legion of Eternity is a singleplayer-focused story-driven card game with a setting that combines science fiction and cosmic horror.</p>
+
+<p><b>Story</b></p>
+
+<p>It is the 26th century. A science breakthrough of potentially limitless importance gives humanity the complete control of the Universe.
+It lasts for several days. Then the Universe retaliates.
+
+Earth becomes a singularity. Insanity spreads through minds like a virus. Everything changes.
+
+Those who survive begin a desperate war against the reality itself.</p>
+
+<p><b>Card customization<b></p>
+
+<p>Change card frames, skills, stats.</p>
+
+<p><b>Strategic battles<b></p>
+
+<p>Send units, summon structures, and execute actions to win turn-based card battles.</p>
+
+<p><b>Crafting and looting<b></p>
+
+<p>Obtain cards and card customization items from crafting and battle rewards.</p>
+
+<p><b>Over ten hours of content<b></p>
+
+<p>Story campaign, hundreds of battles, over fifty cards to obtain.</p>
+ 
+<comments>
+<a>Developer</a>
+</comments>
+	
+<ul style="list-style-type:none">
+<li>Aivaras Klimas</li>
+<li><b>Website:</b> https://zuurix.com/</li>
+<li><b>Facebook:</b> https://www.facebook.com/GamesByZuurix/</li>
+<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix/</li>
+</ul>
+	
+<comments>
+<a>Availability</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Unavailable</li>
+</ul>
+	
+<comments>
+<a>Development stage</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Planned</li>
+
+</ul>
+	
+<comments>
+<a>Press contact</a>
+</comments>
+	
+<ul style="list-style-type:none">
+
+<li>Aivaras Klimas</li>
+<li><b>Email:</b> zuurix@protonmail.com</li>
+</ul>	
+
+<comments>
+<a>Graphics</a>
+</comments>
+	
+<p><a href="https://imgur.com/a/HLjhBFo">▶ View official graphics and screenshots</a></p>
+	
+</div><!-- /.blurb -->
