--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -17,25 +17,25 @@ title: Zuurix.com - Legion of Eternity press kit
 <p><b>Story</b></p>
 
 <p>It is the 26th century. A science breakthrough of potentially limitless importance gives humanity the complete control of the Universe.
-It lasts for several days. Then the Universe retaliates.
+It lasts for several days. Then the Universe retaliates.</p>
 
-Earth becomes a singularity. Insanity spreads through minds like a virus. Everything changes.
+<p>Earth becomes a singularity. Insanity spreads through minds like a virus. Everything changes.</p>
 
-Those who survive begin a desperate war against the reality itself.</p>
+<p>Those who survive begin a desperate war against the reality itself.</p>
 
-<p><b>Card customization<b></p>
+<p><b>Card customization</b></p>
 
 <p>Change card frames, skills, stats.</p>
 
-<p><b>Strategic battles<b></p>
+<p><b>Strategic battles</b></p>
 
 <p>Send units, summon structures, and execute actions to win turn-based card battles.</p>
 
-<p><b>Crafting and looting<b></p>
+<p><b>Crafting and looting</b></p>
 
 <p>Obtain cards and card customization items from crafting and battle rewards.</p>
 
-<p><b>Over ten hours of content<b></p>
+<p><b>Over ten hours of content</b></p>
 
 <p>Story campaign, hundreds of battles, over fifty cards to obtain.</p>
  
