--- a/games/index.html
+++ b/games/index.html
@@ -50,6 +50,19 @@ title: Zuurix.com - Games
 	</ul>
 	
 	<comments>
+	<a>Legion of Eternity</a>
+	</comments>
+	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/loe-images/Induction%20square.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
+	<p></p>	
+	
+	<ul style="margin-bottom: 178px; list-style-type: none;">
+	<li><a href="https://zuurix.com/legion-of-eternity/">▶ About the game</a></li>
+	<li><a href="https://zuurix.com/legion-of-eternity-presskit/">▶ View press kit</a></li>
+	</ul>
+	
+	<comments>
 	<a>Other games</a>
 	</comments>
 	
