--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -12,7 +12,7 @@ title: Zuurix.com - Legion of Eternity press kit
 <a>Full game description</a>
 </comments>
 
-<p>Legion of Eternity is a singleplayer-focused story-driven card game with a setting that combines science fiction and cosmic horror.</p>
+<p>Legion of Eternity is a story-driven card game with a setting that combines science fiction and cosmic horror.</p>
 
 <p><b>Story</b></p>
 
