--- a/legion-of-eternity-presskit/index.html
+++ b/legion-of-eternity-presskit/index.html
@@ -79,4 +79,10 @@ It lasts for several days. Then the Universe retaliates.</p>
 <li><b>Email:</b> zuurix@protonmail.com</li>
 </ul>
 	
+<comments>
+<a>Graphics</a>
+</comments>
+	
+<p><a href="https://imgur.com/a/IaIZvAA">▶ View official graphics and screenshots</a></p>
+	
 </div><!-- /.blurb -->
