--- a/legion-of-eternity/index.html
+++ b/legion-of-eternity/index.html
@@ -1,1 +1,82 @@
+---
+layout: default
+title: Zuurix.com - Legion of Eternity
+---
+<div class="blurb">
+	
+<h1>Legion of Eternity</h1>
+	
+<a href="https://i.imgur.com/hlCAh04.png" target="_blank">
+<img src="https://i.imgur.com/hlCAh04.png" alt="" class="center"> 
+</a>
+	
+<comments>
+<a>About the game</a>
+</comments>
 
+<p>Legion of Eternity is a story-driven card game with a setting that combines science fiction and cosmic horror.</p>
+
+<p><b>Story</b></p>
+
+<p>It is the 26th century. A science breakthrough of potentially limitless importance gives humanity the complete control of the Universe.
+It lasts for several days. Then the Universe retaliates.</p>
+
+<p>Earth becomes a singularity. Insanity spreads through minds like a virus. Everything changes.</p>
+
+<p>Those who survive begin a desperate war against the reality itself.</p>
+
+<p><b>Card customization</b></p>
+
+<p>Change card frames, skills, stats.</p>
+
+<p><b>Strategic battles</b></p>
+
+<p>Send units, summon structures, and execute actions to win turn-based card battles.</p>
+
+<p><b>Crafting and looting</b></p>
+
+<p>Obtain cards and card customization items from crafting and battle rewards.</p>
+
+<p><b>Over ten hours of content</b></p>
+
+<p>Story campaign, hundreds of battles, over fifty cards to obtain.</p>
+
+<comments>
+<a>Links</a>
+</comments>
+	
+<p><a href="https://www.facebook.com/LegionOfEternityCCG/">▶ Facebook page</a></p>
+
+<comments>
+<a>Screenshots</a>
+</comments>
+	
+<a href="https://i.imgur.com/XwxC8pi.png" target="_blank">
+<img src="https://i.imgur.com/XwxC8pi.png" alt="" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/FPZhfRB.png" target="_blank">
+<img src="https://i.imgur.com/FPZhfRB.png" alt="" class="center"> 
+</a>
+  
+<a href="https://i.imgur.com/kUY7uJw.png" target="_blank">
+<img src="https://i.imgur.com/kUY7uJw.png" alt="" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/5khExUF.png" target="_blank">
+<img src="https://i.imgur.com/5khExUF.png" alt="" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/tlevD3Z.png" target="_blank">
+<img src="https://i.imgur.com/tlevD3Z.png" alt="" class="center"> 
+</a>
+  
+<a href="https://i.imgur.com/2Qf5w44.png" target="_blank">
+<img src="https://i.imgur.com/2Qf5w44.png" alt="" class="center"> 
+</a>
+
+<a href="https://i.imgur.com/nq5eFxa.png" target="_blank">
+<img src="https://i.imgur.com/nq5eFxa.png" alt="" class="center"> 
+</a>
+
+</div><!-- /.blurb -->
